logs/Slang/generated/hdlconv/hdlconvertor_p734.sv.log
name: hdlconvertor_p734
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv:18:9: error: identifier 'size' used before its declaration
output [size-1:0] out;
        ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv:17:11: note: declared here
parameter size=5, delay=1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv:19:8: error: identifier 'size' used before its declaration
input [size-1:0] in;
       ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv:17:11: note: declared here
parameter size=5, delay=1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p734.sv:23:1: error: expected member
[size-1:0] out;
^
